--- a/web/css/home.css
+++ b/web/css/home.css
@@ -4,12 +4,6 @@ body {
 }
 
 body {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
   background-color: #f5f5f5;
 }
 
@@ -29,6 +23,13 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
+.form-signin .btn {
+  background: #4caf50;
+  border: none;
+}
+.form-signin .btn:hover {
+  background: #6bce6f;
+}
 .form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
@@ -38,4 +39,17 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+.logo-ifsp {
+  box-shadow: 2px 2px 2px #cdcdcd; 
+  border-radius: 21%;
+  width: 80%;
+  max-width: 500px;
+}
+
+@media only screen and (max-width: 768px) {
+  .logo-container {
+      justify-content: center !important;
+  }
 }
