--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -55,3 +55,10 @@ body {
 .dashboard-main {
   margin-top: 70px;
 }
+
+.btn-h {
+  transition: all 0.2s;
+}
+.btn-h:hover {
+  background-color: #d2d2d2 !important;
+}
